# searchEnginesimple

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  stronly.srpc.h
conf/: files.json
data/page_db/: docdata.glass  iamglass  termlist.glass
data/testdb/: 000005.ldb  000028.ldb  LOG  LOG.old  MANIFEST-000042  MANIFEST-000044
include/: WebPage.hpp  WebPageQuery.hpp  bplus.hpp  ihsah.hpp  lrucache.hpp  predefined.h  readAll.hpp  time.hpp
include/Dictionary/: Dictionary.hpp  KeyRecommander.hpp  SplitTool.hpp
include/Page/: Configuration.hpp  Page.hpp  WebPage.hpp  WebPageQuery.hpp
include/helper/: ihsah.hpp  readAll.hpp  urlcode.hpp
log/: log.txt
src/: KeyServer.cc  PageServer.cc  WebServer.cc  clausd.cc  clm.cc  demo.cpp  keyWord.cc  main.cpp  page.cc  pageq.cc  redis_cli.cc  simhash.cpp  slm.cc  webPage.cc  xmlParseForRSS.cc
src/MapReduce/: coordinator.cc  woker.cc
src/Server/: KeyServer.cc  PageServer.cc  WebServer.cc
src/stronly/: CMakeLists.txt  WebServer.cc  client.conf  client.pb_skeleton.cc  client_main.cc  client_page.conf  pageserver.conf  pageserver_main.cc  server.conf  server.pb_skeleton.cc  server_main.cc  stronly.pb.cc  stronly.pb.h  stronly.proto
src/test/: bpteat.cc  btree.cc  jieba.cpp  pageq.cc  simhash.cpp  xapiansea.cc  xiapian.cc  xmlParseForRSS.cc  xpian_tes.py
wal/: 1734838755895823492.sstable  1734838908532277605.sstable  wal
